--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </button>
                 <span class="caption mb10">Clínica Jurerê Medical Center</span>
                 <button class="button whatsapp mb10">
-                    <a href="https://wa.me/554898170646"></a>
+                    <a href="https://wa.me/554898170646">
                     <i class="fa-brands fa-whatsapp" target="_blank"></i>
                     WhatsApp</a>
                 </button>
@@ -44,7 +44,7 @@
             <section>
                 <h2 class="mb10">Contato</h2>
                 <button class="button email mb10">
-                    <a href="mailto:nicollevigna@gmail.com?subject=Agendamento Card Page"></a>
+                    <a href="mailto:nicollevigna@gmail.com?subject=Agendamento Card Page">
                     <i class="fa-solid fa-envelope"></i>
                     Email</a>
                 </button>
