Ajustado os links para funcionar no botão inteiro

--- a/index.html
+++ b/index.html
@@ -19,40 +19,46 @@
     <main>
       <section>
         <h2 class="mb10">Social</h2>
-        <button class="button instagram mb10">
-          <a href="https://www.instagram.com/dranicollevigna/" target="_blank">
+        <a href="https://www.instagram.com/dranicollevigna/" target="_blank">
+          <button class="button instagram mb10">
             <i class="fa-brands fa-instagram"></i>
-            Instagram</a>
-        </button>
+            Instagram
+          </button>
+        </a>
         <hr class="mb10">
       </section>
       <section>
         <h2 class="mb10">Agendamento</h2>
         <span class="caption mb10">Consultório Ingleses</span>
-        <button class="button whatsapp mb10">
-          <i class="fa-brands fa-whatsapp"></i>
-          <a href="https://wa.me/554833693265" target="_blank">WhatsApp</a>
-        </button>
-        <span class="caption mb10">Clínica Jurerê Medical Center</span>
-        <button class="button whatsapp mb10">
-          <a href="https://wa.me/554898170646">
+        <a href="https://wa.me/554833693265" target="_blank">
+          <button class="button whatsapp mb10">
             <i class="fa-brands fa-whatsapp"></i>
-            WhatsApp</a>
-        </button>
+            WhatsApp
+          </button>
+        </a>
+        <span class="caption mb10">Clínica Jurerê Medical Center</span>
+        <a href="https://wa.me/554898170646">
+          <button class="button whatsapp mb10">
+            <i class="fa-brands fa-whatsapp"></i>
+            WhatsApp
+          </button>
+        </a>
         <hr class="mb10">
       </section>
       <section>
         <h2 class="mb10">Contato</h2>
-        <button class="button email mb10">
-          <a href="mailto:nicollevigna@gmail.com?subject=Agendamento Card Page">
+        <a href="mailto:nicollevigna@gmail.com?subject=Agendamento Card Page">
+          <button class="button email mb10">
             <i class="fa-solid fa-envelope"></i>
-            Email</a>
-        </button>
-        <button class="button whatsapp mb10">
-          <a href="https://wa.me/554896964196" target="_blank">
+            Email
+          </button>
+        </a>
+        <a href="https://wa.me/554896964196" target="_blank">
+          <button class="button whatsapp mb10">
             <i class="fa-brands fa-whatsapp"></i>
-            WhatsApp</a>
-        </button>
+            WhatsApp
+          </button>
+        </a>
       </section>
     </main>
   </div>
