Ajuste target Links

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </button>
         </a>
         <span class="caption mb10">Clínica Jurerê Medical Center</span>
-        <a href="https://wa.me/554898170646">
+        <a href="https://wa.me/554898170646" target="_blank">
           <button class="button whatsapp mb10">
             <i class="fa-brands fa-whatsapp"></i>
             WhatsApp
